Fix spacing issue

--- a/src/main/webapp/app/modules/visualizer/visualizer.scss
+++ b/src/main/webapp/app/modules/visualizer/visualizer.scss
@@ -134,6 +134,13 @@
   right: 470px;
 }
 
+.dimension-filter {
+  margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 #query-info-panel {
   width: 220px;
   opacity: 0.95;
